--- a/routes/startbootstrap-agency-1.0.4/index.html
+++ b/routes/startbootstrap-agency-1.0.4/index.html
@@ -156,16 +156,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>I have over 5 years of experience working in Data Science. Currently, I work as a data scientist in LinkedIn’s Growth team and focus on improving LinkedIn’s Viral Invitation System, which is responsible for the growth of company’s member base and total connection density using advanced analytics, performing experimentations, building monitoring dashboards, developing statistical models, onboarding and maintaining product metrics and designing new tracking data.</p>
                 </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>Previously, I was a big data scientist at Motorola Mobility, where I analyzed mobile app usage data for millions of android smartphones and improved device quality. I have an MS in Analytics from Northwestern University and a BS in Management Science from UC San Diego.</p>
                 </div>
             </div>
         </div>
