update the about me page

--- a/routes/startbootstrap-agency-1.0.4/index.html
+++ b/routes/startbootstrap-agency-1.0.4/index.html
@@ -17,6 +17,7 @@
 
     <!-- Theme CSS -->
     <link href="css/freelancer.css" rel="stylesheet">
+    <link href="css/timeline.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -48,7 +49,7 @@
                         <a href="#portfolio">Projects</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About Me</a>
+                        <a href="#timeline">About Me</a>
                     </li>
                 </ul>
             </div>
@@ -147,21 +148,41 @@
     </section>
 
     <!-- About Section -->
-    <section class="success" id="about">
+    <section class="success" id="timeline">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About "Joon"</h2>
-                    <hr class="star-light">
+                    <h2>Joon's Professional Journey</h2>
+                    <br>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <p>I have over 5 years of experience working in Data Science. Currently, I work as a data scientist in LinkedIn’s Growth team and focus on improving LinkedIn’s Viral Invitation System, which is responsible for the growth of company’s member base and total connection density using advanced analytics, performing experimentations, building monitoring dashboards, developing statistical models, onboarding and maintaining product metrics and designing new tracking data.</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2">
-                    <p>Previously, I was a big data scientist at Motorola Mobility, where I analyzed mobile app usage data for millions of android smartphones and improved device quality. I have an MS in Analytics from Northwestern University and a BS in Management Science from UC San Diego.</p>
-                </div>
+              <ul>
+                <li>
+                  <div>
+                    <time>LinkedIn (Current) </time>
+                    As a senior data scientist in Growth team, Joon has improved LinkedIn’s viral growth ecosystem using advanced analytics, performing experimentations, building monitoring dashboards, developing statistical models, onboarding and maintaining product metrics and designing new tracking data.
+                  </div>
+                </li>
+                <li>
+                  <div>
+                    <time>Motorola Mobility (2015)</time>
+                    As a Big Data Scientist, Joon built the main customer segments for moto x (2014) and developed an advanced analysis frameworks to quantify the increased risks from changes in device performance by analyzing mobile app usage data for millions of android smartphones.
+                  </div>
+                </li>
+                <li>
+                  <div>
+                    <time>Northwestern University (2013)</time>
+                    M.S. in Analytics
+                  </div>
+                </li>
+                <li>
+                  <div>
+                    <time>UC San Diego (2012)</time>
+                    B.S. in Management Science; Summa Cum Laude; Provost Scholar (Valedictorian)
+                  </div>
+                </li>                 
+              </ul>
             </div>
         </div>
     </section>
@@ -177,19 +198,7 @@
                         <h3>Follow "Joon"</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://www.linkedin.com/in/joonlim" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -451,12 +460,11 @@
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
-
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
+
+    <!-- Timeline JavaScript -->
+    <script src="js/timeline.js"></script>
 
 </body>
 
